ros2_ws/log/build_2022-05-27_17-53-47/ldmk_package/stderr.log
  File "/home/user/ros2_ws/install/ldmk_package/lib/python3.8/site-packages/ldmk_package/roboticsIK.py", line 451
    return actuator_limitations([theta1 + math.pi/2, - theta2 + math.pi/2, theta3, theta5 - math.pi/2, theta4, theta6 + math.pi/2])
    ^
SyntaxError: 'return' outside function

